--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {}
+  }
 }
