--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a16",
+  "name": "assignment17",
   "version": "1.0.0",
-  "description": "assignment16",
+  "description": "assignment17",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
